--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   node-app:
     container_name: "docker-container"
     build: .
-    volumes:
-      - ./:/app:ro
     ports:
       - "5000:5000"
-    
+    env_file:
+      - ./.env
