--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,10 @@
 version: '3'
 services:
   node-app:
+    build:
+      context: .
+      args:
+        - DB=mongo
     volumes:
       - ./:/app:ro
     environment:
