--- a/docker-compose-product.yml
+++ b/docker-compose-product.yml
@@ -1,5 +1,9 @@
 version: '3'
 services:
   node-app:
+    build: 
+      context: .
+      args:
+        - DB=sql
     environment:
       - DB=sql
