--- a/docker-compose-product.yml
+++ b/docker-compose-product.yml
@@ -3,7 +3,6 @@ services:
   node-app:
     build: 
       context: .
-      args:
-        - DB=sql
+      target: product
     environment:
       - DB=sql
